k8s/warehouse-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: warehouse-service
  namespace: ecommerce
  labels:
    app: warehouse-service
spec:
  selector:
    app: warehouse-service
  ports:
  - name: http
    port: 80
    targetPort: 8084
  - name: metrics
    port: 9090
    targetPort: 9090
  type: ClusterIP
